--- a/diff_expression/diff_expression_limma_voom.Rmd
+++ b/diff_expression/diff_expression_limma_voom.Rmd
@@ -55,7 +55,7 @@ htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 config <- yaml::yaml.load_file("../config/config.yaml")
 
 # read in metadata
-metadata <- utils::read.csv(base::file.path(config$metadata))
+metadata <- utils::read.csv(base::file.path(config$metadata_path))
 ```
 
 ## Info
